--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,11 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "next-auth": "^4.0.0",
+    "lucide-react": "^0.295.0",
+    "prisma": "^5.0.0",
+    "@prisma/client": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
