--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,10 @@
     "next-auth": "^4.0.0",
     "lucide-react": "^0.295.0",
     "prisma": "^5.0.0",
-    "@prisma/client": "^5.0.0"
+    "@prisma/client": "^5.0.0",
+    "react-hot-toast": "^2.4.0",
+    "@headlessui/react": "^1.7.16",
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
