--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,9 @@
     "@prisma/client": "^5.0.0",
     "react-hot-toast": "^2.4.0",
     "@headlessui/react": "^1.7.16",
-    "class-variance-authority": "^0.7.0"
+    "class-variance-authority": "^0.7.0",
+    "zustand": "^4.4.1",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
