--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,8 @@
     "@headlessui/react": "^1.7.16",
     "class-variance-authority": "^0.7.0",
     "zustand": "^4.4.1",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "@next-auth/prisma-adapter": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
