--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "zustand": "^4.4.1",
     "tailwind-merge": "^1.14.0",
+    "bcryptjs": "^2.4.3"
     "@next-auth/prisma-adapter": "^1.0.5"
   },
   "devDependencies": {
